<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/card"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/java_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/question_title"
                    android:text="@string/question_n1_title" />

                <TextView
               style="@style/question"
                android:text="@string/question_n1"/>

                <RadioGroup
                    android:id="@+id/radio_group_q1"
                    style="@style/radio_group">
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q1_radio_button_1"
                        android:text="@string/question_n1_radio_button_1"
                         />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q1_radio_button_2"
                        android:text="@string/question_n1_radio_button_2"
                         />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q1_radio_button_3"
                        android:text="@string/question_n1_radio_button_3" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/card"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/java_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/question_title"
                    android:text="@string/question_n2_title" />

                <TextView
                    style="@style/question"
                    android:text="@string/question_n2"/>

                <RadioGroup
                    android:id="@+id/radio_group_q2"
                    style="@style/radio_group">
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q2_radio_button_1"
                        android:text="@string/question_n2_radio_button_1"
                        />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q2_radio_button_2"
                        android:text="@string/question_n2_radio_button_2" />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q2_radio_button_3"
                        android:text="@string/question_n2_radio_button_3" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        style="@style/card"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/java_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/question_title"
                    android:text="@string/question_n3_title" />

                <TextView
                    style="@style/question"
                    android:text="@string/question_n3"/>

              <EditText
                  android:id="@+id/text_question3"
                  style="@style/edit_text" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        style="@style/card"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/java_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_title"
                    android:text="@string/question_n4_title" />

                <TextView
                    style="@style/question"
                    android:text="@string/question_n4"/>

                <RadioGroup
                    android:id="@+id/radio_group_q4"
                    style="@style/radio_group">
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q4_radio_button_1"
                        android:text="@string/question_n4_radio_button_1"
                        />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q4_radio_button_2"
                        android:text="@string/question_n4_radio_button_2"
                        />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q4_radio_button_3"
                        android:text="@string/question_n4_radio_button_3" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/card"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/java_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_title"
                    android:text="@string/question_n5_title" />

                <TextView
                    style="@style/question"
                    android:text="@string/question_n5"/>

                <RadioGroup
                    android:id="@+id/radio_group_q5"
                    style="@style/radio_group">
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q5_radio_button_1"
                        android:text="@string/question_n5_radio_button_1"
                        />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q5_radio_button_2"
                        android:text="@string/question_n5_radio_button_2"
                        />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q5_radio_button_3"
                        android:text="@string/question_n5_radio_button_3" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/card"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/java_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/question_title"
                    android:text="@string/question_n6_title" />

                <TextView
                    style="@style/question"
                    android:text="@string/question_n6"/>

                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/question_6_checkbox_1"
                    android:text="@string/question_n6_checkbox_1"/>

                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/question_6_checkbox_2"
                    android:text="@string/question_n6_checkbox_2"/>

                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/question_6_checkbox_3"
                    android:text="@string/question_n6_checkbox_3"/>

                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/question_6_checkbox_4"
                    android:text="@string/question_n6_checkbox_4"/>

                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/question_6_checkbox_5"
                    android:text="@string/question_n6_checkbox_5"/>
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        style="@style/card"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/java_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_title"
                    android:text="@string/question_n7_title" />

                <TextView
                    style="@style/question"
                    android:text="@string/question_n7"/>

                <RadioGroup
                    android:id="@+id/radio_group_q7"
                    style="@style/radio_group">
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q7_radio_button_1"
                        android:text="@string/question_n7_radio_button_1"
                        />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q7_radio_button_2"
                        android:text="@string/question_n7_radio_button_2"
                        />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q7_radio_button_3"
                        android:text="@string/question_n7_radio_button_3" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/card"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/java_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_title"
                    android:text="@string/question_n8_title" />

                <TextView
                    style="@style/question"
                    android:text="@string/question_n8"/>

                <RadioGroup
                    android:id="@+id/radio_group_q8"
                    style="@style/radio_group">
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q8_radio_button_1"
                        android:text="@string/question_n8_radio_button_1"
                        />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q8_radio_button_2"
                        android:text="@string/question_n8_radio_button_2"
                        />
                    <RadioButton
                        style="@style/radio_button"
                        android:id="@+id/q8_radio_button_3"
                        android:text="@string/question_n8_radio_button_3" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/card"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/java_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/question_title"
                    android:text="@string/question_n9_title" />

                <TextView
                    style="@style/question"
                    android:text="@string/question_n9"/>

                <EditText
                    android:id="@+id/text_question9"
                    style="@style/edit_text" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/card"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/java_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/question_title"
                    android:text="@string/question_n10_title" />

                <TextView
                    style="@style/question"
                    android:text="@string/question_n10"/>

                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/question_10_checkbox_1"
                    android:text="@string/question_n10_checkbox_1"/>

                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/question_10_checkbox_2"
                    android:text="@string/question_n10_checkbox_2"/>

                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/question_10_checkbox_3"
                    android:text="@string/question_n10_checkbox_3"/>

                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/question_10_checkbox_4"
                    android:text="@string/question_n10_checkbox_4"/>

                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/question_10_checkbox_5"
                    android:text="@string/question_n10_checkbox_5"/>


            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/final_score"
        android:text="@string/submit_button"
        android:onClick="submitScore"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_quiz"
            android:text="@string/reset_quiz"
            android:onClick="reset"/>


    </LinearLayout>



</LinearLayout>
</ScrollView>
