<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_top">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold"
        android:textColor="@color/main_title_color"
        android:textAlignment="center"
        android:text="@string/label_main_title" />

    <ImageView style="@style/java_icon"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_question"
        android:textColor="@color/main_title_color"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/label_enter_name"/>

    <EditText
        style="@style/edit_text"
        android:id="@+id/edt_player"
        android:textSize="@dimen/text_size_huge"
        android:textColor="@color/main_title_color"
        android:textColorHint="@color/enter_name_color"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/hint_enter_name" />

    <Button
        style= "@style/button"
        android:id="@+id/btn_go_to_quiz"
        android:background="@drawable/buttonshape"
        android:text="@string/btn_enter_button" />

</LinearLayout>